Ensure Java 8 compatibility