@@ -20,6 +20,7 @@
 package com.github.mlangc.more.log4j2.filters;
 
 import com.github.mlangc.more.log4j2.test.helpers.CountingAppender;
+import org.apache.logging.log4j.Marker;
 import org.apache.logging.log4j.MarkerManager;
 import org.apache.logging.log4j.core.Filter;
 import org.apache.logging.log4j.core.Filter.Result;
@@ -27,20 +28,60 @@ import org.apache.logging.log4j.core.LoggerContext;
 import org.apache.logging.log4j.core.filter.DenyAllFilter;
 import org.apache.logging.log4j.core.test.junit.LoggerContextSource;
 import org.apache.logging.log4j.core.test.junit.Named;
+import org.apache.logging.log4j.spi.ExtendedLogger;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assumptions.assumeThat;
 
 
 class ConstantFilterTest {
-    record TestCase(Filter filter, Result result) { }
+    final static class TestCase {
+        private final Filter filter;
+        private final Result result;
+
+        TestCase(Filter filter, Result result) {
+            this.filter = filter;
+            this.result = result;
+        }
+
+        public Filter filter() {
+            return filter;
+        }
+
+        public Result result() {
+            return result;
+        }
+
+        @Override
+        public boolean equals(Object obj) {
+            if (obj == this) return true;
+            if (obj == null || obj.getClass() != this.getClass()) return false;
+            TestCase that = (TestCase) obj;
+            return Objects.equals(this.filter, that.filter) &&
+                   Objects.equals(this.result, that.result);
+        }
+
+        @Override
+        public int hashCode() {
+            return Objects.hash(filter, result);
+        }
+
+        @Override
+        public String toString() {
+            return "TestCase[" +
+                   "filter=" + filter + ", " +
+                   "result=" + result + ']';
+        }
+    }
 
     @ParameterizedTest
     @MethodSource("testCases")
@@ -57,7 +98,7 @@ class ConstantFilterTest {
     }
 
     static List<TestCase> testCases() {
-        return List.of(
+        return Arrays.asList(
                 new TestCase(new AcceptAllFilter(), Result.ACCEPT),
                 new TestCase(DenyAllFilter.newBuilder().build(), Result.DENY),
                 new TestCase(new NeutralFilter(), Result.NEUTRAL));
@@ -66,19 +107,19 @@ class ConstantFilterTest {
     @Test
     @LoggerContextSource("ConstantFilterTest.xml")
     void constantFiltersShouldWorkInConfig(LoggerContext loggerContext, @Named("CountingAppender") CountingAppender countingAppender) {
-        var log = loggerContext.getLogger(getClass());
+        ExtendedLogger log = loggerContext.getLogger(getClass());
         log.debug("test");
         log.info("test");
         assertThat(countingAppender.currentCount()).isOne();
 
         countingAppender.clear();
-        var always = MarkerManager.getMarker("always");
+        Marker always = MarkerManager.getMarker("always");
         log.debug(always, "test");
         log.info(always, "test");
         assertThat(countingAppender.currentCount()).isEqualTo(2);
 
         countingAppender.clear();
-        var never = MarkerManager.getMarker("never");
+        Marker never = MarkerManager.getMarker("never");
         log.debug(never, "test");
         log.info(never, "test");
         assertThat(countingAppender.currentCount()).isZero();
